[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/GraphEditor/GraphNodes/GraphNodeComment.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/GraphEditor/GraphNodes/GraphNodePlayerInput.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/GraphEditor/GraphNodes/GraphNodePlayerOutput.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/GraphEditor/NodeGraphEditor.cs" type="Script" id=4]
[ext_resource path="res://scripts/graph_editor_debug.gd" type="Script" id=5]
[ext_resource path="res://scenes/GraphEditor/NodeEngine.cs" type="Script" id=7]
[ext_resource path="res://scenes/GraphEditor/GraphNodes/GraphNodeNumber.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/GraphEditor/GraphEditorPopup.tscn" type="PackedScene" id=9]

[node name="NodeEngine" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="GraphEdit" type="GraphEdit" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Comment" parent="GraphEdit" instance=ExtResource( 1 )]
margin_left = 50.0
margin_top = 600.0
margin_right = 291.0
margin_bottom = 735.0
mouse_filter = 1
offset = Vector2( 50, 600 )

[node name="PlayerInput" parent="GraphEdit" instance=ExtResource( 2 )]
margin_left = 50.0
margin_top = 200.0
margin_right = 217.0
margin_bottom = 440.0
mouse_filter = 1
offset = Vector2( 50, 200 )

[node name="Debug" type="Control" parent="GraphEdit"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 5 )

[node name="PlayerOutput" parent="GraphEdit" instance=ExtResource( 3 )]
margin_left = 700.0
margin_top = 200.0
margin_right = 871.0
margin_bottom = 304.0
mouse_filter = 1
offset = Vector2( 700, 200 )

[node name="Number" parent="GraphEdit" instance=ExtResource( 8 )]
margin_left = 400.0
margin_top = 400.0
margin_right = 542.0
margin_bottom = 462.0
mouse_filter = 1
offset = Vector2( 400, 400 )

[node name="Number2" parent="GraphEdit" instance=ExtResource( 8 )]
margin_left = 400.0
margin_top = 300.0
margin_right = 542.0
margin_bottom = 362.0
mouse_filter = 1
offset = Vector2( 400, 300 )

[node name="GraphEditorPopup" parent="." instance=ExtResource( 9 )]

[connection signal="connection_from_empty" from="GraphEdit" to="GraphEdit/Debug" method="_on_GraphEdit_connection_from_empty"]
[connection signal="connection_request" from="GraphEdit" to="GraphEdit" method="FSConnect"]
[connection signal="connection_request" from="GraphEdit" to="GraphEdit/Debug" method="_on_GraphEdit_connection_request"]
[connection signal="connection_to_empty" from="GraphEdit" to="GraphEdit/Debug" method="_on_GraphEdit_connection_to_empty"]
[connection signal="copy_nodes_request" from="GraphEdit" to="GraphEdit/Debug" method="_on_GraphEdit_copy_nodes_request"]
[connection signal="duplicate_nodes_request" from="GraphEdit" to="GraphEdit/Debug" method="_on_GraphEdit_duplicate_nodes_request"]
[connection signal="paste_nodes_request" from="GraphEdit" to="GraphEdit/Debug" method="_on_GraphEdit_paste_nodes_request"]
[connection signal="popup_request" from="GraphEdit" to="GraphEditorPopup" method="show"]
